Fixed wrapping.

--- a/Resources/SDGSwiftSource/Syntax Highlighting.css
+++ b/Resources/SDGSwiftSource/Syntax Highlighting.css
@@ -16,6 +16,7 @@
 
 .swift {
     display: inline;
+    white-space: pre-wrap;
 }
 .swift.blockquote {
     display: block;
